tests/lean/internal_names.lean
definition _foo : nat := 0 -- error

structure _bla := (a b : nat)

inductive _empty : Type.
